Add some basic functionality to the rails app
Signed-off-by: Will Fisher <wfisher@chef.io>

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,4 @@ test:
 #
 production:
   <<: *default
-  database: superwebsite_production
-  username: superwebsite
-  password: <%= ENV['SUPERWEBSITE_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
